--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "djleamen",
         "projectKey": "djleamen_daily-journal"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
